the draft of the site has been completet to half, some bugs in the first part have been fixed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header-top">
+    <nav class="header-top">
         <div class="header-top-element">
             CONTACTS SALES
         </div>
@@ -18,7 +18,7 @@
             US
             <img src="assets/icons/down.png" alt="down arrow">
         </div> 
-    </div> 
+    </nav> 
 
     <div class="header-low">
         <img src="assets/icons/roomlogo.png" alt="room logo">
@@ -37,13 +37,49 @@
     </div> 
 
     <div class="slogan">
-        <div class="sloganheader">
+        <div class="sloganheader" >
             Design that inspires a better way to work.
         </div>
-        <div class="slogantext">
+        <div class="slogantext" >
             We've developed a series of purpose-built rooms that offer companies looking for change
             an affordable, sustainable, and flexible alternative to fixed construction and traditional office
             design.
+        </div>
+    </div>
+
+    <div class="photo-rooms">
+        <img src="assets/images/phoneRoom.png" alt="phone room">
+        <img src="assets/images/focusRoom.png" alt="focus room">
+        <img src="assets/images/meetingRoom.png" alt="meeting room">
+        <img src="assets/images/openMeetingRoom.png" alt="open meeting room">
+    </div>
+
+    <div class="brand-information">
+        <div class="brand-information-header">
+            The world's leading brands choose ROOM.
+        </div>
+        <div class="brand-information-text">
+            Over 3,000 and counting.
+        </div>
+        <div class="brand-logo">
+            <img src="assets/icons/amazon.png" alt="amazon">
+            <img src="assets/icons/angellist.png" alt="angellist">
+            <img src="assets/icons/apple.png" alt="apple">
+            <img src="assets/icons/asana.png" alt="asana">
+            <img src="assets/icons/buzzfeed.png" alt="buzzfeed">
+            <img src="assets/icons/google.png" alt="google">
+            <img src="assets/icons/greenpeace.png" alt="greenpeace">
+            <img src="assets/icons/harrys.png" alt="harrys">
+            <img src="assets/icons/hulu.png" alt="hulu">
+            <img src="assets/icons/knotel.png" alt="knotel">
+            <img src="assets/icons/morgan.png" alt="morgan">
+            <img src="assets/icons/nasa.png" alt="nasa">
+            <img src="assets/icons/nike.png" alt="nike">
+            <img src="assets/icons/reddit.png" alt="reddit">
+            <img src="assets/icons/salesforce.png" alt="salesforce">
+            <img src="assets/icons/samsung.png" alt="samsung">
+            <img src="assets/icons/uber.png" alt="uber">
+            <img src="assets/icons/walmart.png" alt="walmart">
         </div>
     </div>
 </body>
