another part of the new draft was written, some styles were added

--- a/index.html
+++ b/index.html
@@ -49,33 +49,93 @@
             <img src="assets/images/roomPhoto.png" alt="room photo">
         </div>
 
-        <div>
-            <div>
+        <div class="slogan">
+            <div class="slogan-header">
                 Design that inspires a better way to work.
-
             </div>
-            <div>
+            <div class="slogan-text">
                 We've developed a series of purpose-built rooms that offer companies looking for change 
                 an affordable, sustainable, and flexible alternative to fixed construction and traditional office design.
             </div>
         </div>
 
-        <div>
-            <img src="assets/images/phoneRoom.png" alt="phone booth image">
-            <img src="assets/images/focusRoom.png" alt="focus room image">
-            <img src="assets/images/meetingRoom.png" alt="meeting room image">
-            <img src="assets/images/openMeetingRoom.png" alt="open meeting room image">
+        <div class="example-photo">
+            <div>
+                <img src="assets/images/phoneRoom.png" alt="phone booth image">
+            </div>
+            <div>
+                <img src="assets/images/focusRoom.png" alt="focus room image">
+            </div>
+            <div>
+                <img src="assets/images/meetingRoom.png" alt="meeting room image">
+            </div>
+            <div>
+                <img src="assets/images/openMeetingRoom.png" alt="open meeting room image">
+            </div>
         </div>
 
-        <div>
-            <div>
+        <div class="brands-info">
+            <div class="brands-header">
                 The world's leading brands choose ROOM.
             </div>
-            <div>
+            <div class="brands-text">
                 Over 3,000 and counting.
             </div>
-            <div>
-                barnds
+            <div class="brands-logos">
+              <div>
+                <img src="assets/icons/nike.png" alt="nike">
+              </div>
+              <div>
+                <img src="assets/icons/nasa.png" alt="nasa">
+              </div>
+              <div>
+                <img src="assets/icons/google.png" alt="google">
+              </div>
+              <div>
+                <img src="assets/icons/uber.png" alt="uber">
+              </div>
+              <div>
+                <img src="assets/icons/walmart.png" alt="walmart">
+              </div>
+              <div>
+                <img src="assets/icons/salesforce.png" alt="salesforce">
+              </div>
+              <div>
+                <img src="assets/icons/hulu.png" alt="hulu">
+              </div>
+              <div>
+                <img src="assets/icons/reddit.png" alt="reddit">
+              </div>
+              <div>
+                <img src="assets/icons/knotel.png" alt="knotel">
+              </div>
+              <div>
+                <img src="assets/icons/samsung.png" alt="samsung">
+              </div>
+              <div>
+                <img src="assets/icons/amazon.png" alt="amazon">
+              </div>
+              <div>
+                <img src="assets/icons/angellist.png" alt="angellist">
+              </div>
+              <div>
+                <img src="assets/icons/buzzfeed.png" alt="buzzfeed">
+              </div>
+              <div>
+                <img src="assets/icons/apple.png" alt="apple">
+              </div>
+              <div>
+                <img src="assets/icons/harrys.png" alt="harrys">
+              </div>
+              <div>
+                <img src="assets/icons/asana.png" alt="asana">
+              </div>
+              <div>
+                <img src="assets/icons/morgan.png" alt="j.p.morgan">
+              </div>
+              <div>
+                <img src="assets/icons/greenpeace.png" alt="greenpeace">
+              </div>
             </div>
         </div>
 
@@ -178,7 +238,67 @@
         </div>
 
         <div class="footer">
+            <div>
+                <img src="assets/icons/logoRoom.png" alt="room logo">
+            </div>
+            <div>
+                About
 
+                Compare
+                Reviews
+                Risk-Free Trial
+                Careers
+                Press
+                Podcast
+                Blog
+
+                Showrooms
+
+                New York
+                London
+                San Francisco
+                Paris
+                Copenhagen
+                Zürich
+                Los Angeles
+                Berlin
+                Belgium
+                Virtual Demo
+            </div>
+            <div>
+                Support
+
+                FAQ
+                Booth Assembly
+                Delivery
+                Room Service
+                Warranty
+                Terms of Use
+                Privacy Policy
+                Copyright
+
+                Office
+
+                599 Broadway, FL 9 New York, NY 10012
+            </div>
+            <div>
+                Follow us
+                <img src="assets/icons/facebook.png" alt="facebook icon">
+                <img src="assets/icons/instagram.png" alt="instagram icon">
+                <img src="assets/icons/linkedin.png" alt="linkedin icon">
+                <img src="assets/icons/pinterest.png" alt="pinterest icon">
+            </div>
+            <div>
+                Join our mailing list
+                Be the first to hear everything about ROOM.
+                <textarea></textarea>
+                United States
+                <img src="assets/icons/down.png" alt="down">
+                <button></button>
+                <button></button>
+                Yes. I would like to receive marketing communications from ROOM about product updates and special offers. Please refer to ROOM’s Privacy Policy for more information about how we process your data (including how to unsubscribe).
+                Sign Up
+            </div>
         </div>
 
     </div>
