another part of the draft

--- a/index.html
+++ b/index.html
@@ -143,20 +143,44 @@
             <img src="assets/images/officeRoomImage.png" alt="office room image">
         </div>
 
-        <div>
+        <div class="marketing-info">
             <div>
-                <div>
+                <div class="marketing-info-bold">
                     Our simple and seamless modular products allow teams to shape and then reshape their work
                     environment with ease.
                 </div>
-                <div>
+                <div class="marketing-info-text">
                     GET IN TOUCH
                 </div>
             </div>
             <div>
-                <div>images</div>
-                <div>text bold</div>
-                <div>text</div>
+                <div class="marketing">
+                    <img src="assets/icons/costicon.png" alt="cost-effective">
+                    <img src="assets/icons/timeicon.png" alt="time saving">
+                    <img src="assets/icons/flexicon.png" alt="flexible">
+                </div>
+            <div>
+            </div>
+                <div class="marketing">
+                    <div class="marketing-text">
+                        <div class="marketing-bold">
+                            Cost-effective
+                        </div>
+                        At a fraction of the cost of traditional construction, our pre-fab solutions create additional space for focused work and collaboration without constant noise, debris and distraction.
+                    </div>
+                    <div class="marketing-text">
+                        <div class="marketing-bold">
+                            Time Saving
+                        </div>
+                        Thoughtful design ensures simple installation in a few hours or less. And, because our products are safety ensured, you'll never have to spend time or money chasing after permits, contractors, and more.
+                    </div>
+                    <div  class="marketing-text">
+                        <div class="marketing-bold">
+                            Flexible
+                        </div>
+                        Unlike traditional construction, our purpose-built products were designed to adapt with your workspace and can easily be positioned in various places throughout your office, or to an entirely new location.
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -164,21 +188,21 @@
             <img src="assets/images/feedback.png" alt="feedback">
         </div>
 
-        <div>
-            <div>
+        <div class="motto">
+            <div class="motto-bold">
                 We take a human approach to a business-to-business industry, breaking the boundaries between corporate and personal, and rethinking every step of the user experience along the way.
             </div>
-            <div>
+            <div class="motto-text">
                 We make work, work for you.
             </div>
         </div>
 
-        <div>
+        <div class="container">
             <div>
                 <img src="assets/images/mark-image1.png" alt="marketing image first">
             </div>
-            <div>
-                <div>
+            <div class="container-text">
+                <div class="container-text-bold">
                     We sell direct.
                 </div>
                 <div>
@@ -188,12 +212,12 @@
         </div>
 
 
-        <div>
+        <div class="container">
             <div>
                 <img src="assets/images/mark-image2.png" alt="marketing image second">
             </div>
-            <div>
-                <div>
+            <div class="container-text">
+                <div class="container-text-bold">
                     We build with purpose.
                 </div>
                 <div>
@@ -202,12 +226,12 @@
             </div>
         </div>
 
-        <div>
+        <div class="container-left">
             <div>
                 <img src="assets/images/mark-image3.png" alt="marketing image third">
             </div>
-            <div>
-                <div>
+            <div class="container-text">
+                <div class="container-text-bold">
                     We design sustainably.
                 </div>
                 <div>
@@ -224,9 +248,20 @@
             <div>
                 100 day risk-free trial
             </div>
-            <div>1 column</div>
-            <div>1 column</div>
-            <div>1 column</div>
+            <div>
+                <div>
+                    <img src="assets/icons/shippingItem.png" alt="shipping item">
+                    FREE SHIPPING
+                </div>
+                <div>
+                    <img src="assets/icons/electricItem.png" alt="plug item">
+                    PLUG & PLAY
+                </div>
+                <div>
+                    <img src="assets/icons/walletItem.png" alt="wallet item">
+                    FREE RETURNS
+                </div>
+            </div>
             <div>
                 <button>
 
